# cassidoid

./: .gitignore  Cargo.toml  Justfile  Readme.md  index.html
.cargo/: config.toml
.github/workflows/: deploy.yml
_app/: version.json
_app/immutable/assets/: 0.n485MB1P.css  0.znpgjYKD.css  2.B8ouny6S.css  2.BH57-26f.css  2.BWl6SFCG.css  kernel_bg.3k5wUSKR.wasm  kernel_bg.4LUgcg_c.wasm  kernel_bg.5QHMjoWH.wasm  kernel_bg.7idnPtHn.wasm  kernel_bg.B1mRUIo6.wasm  kernel_bg.BAO4Cg9N.wasm  kernel_bg.BBwvWqNB.wasm  kernel_bg.BId5oK5s.wasm  kernel_bg.BKnfJea_.wasm  kernel_bg.BOjBRP0w.wasm  kernel_bg.BPrL7Fh2.wasm  kernel_bg.BWGE1ppC.wasm  kernel_bg.BYgm_wdt.wasm  kernel_bg.BYpM90Pc.wasm  kernel_bg.BZsVdR_b.wasm  kernel_bg.BaCRcMC8.wasm  kernel_bg.Bevi73rq.wasm  kernel_bg.BsE9enp4.wasm  kernel_bg.BvDj6CaB.wasm  kernel_bg.BviDoz39.wasm  kernel_bg.BxaUOzXm.wasm  kernel_bg.By1jqJbx.wasm  (+30 more)
crates/cli/: Cargo.toml
crates/eval-server/: Cargo.toml
crates/eval-server/src/: main.rs
crates/expr-macro/: Cargo.toml
crates/kernel/: Cargo.toml
crates/kernel/src/: api.rs  execute.rs  hacks.rs  lib.rs  register.rs
crates/kernel/src/tests/: integration_tests.rs  misc.rs  mod.rs
crates/parser-macros/: Cargo.toml
crates/server/: Cargo.toml
crates/symbolics/: Cargo.toml  build.rs
crates/wasm/: Cargo.toml
crates/yasc-cli/: Cargo.toml
debug-utils/list-matches/: Cargo.toml
debug-utils/visualize-pattern-program/: Cargo.toml
static/: index.html
tools/rubi-import/: rubi-import.py
tools/vscode-cassida/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
(+602 files in other folders)
