[workspace]
resolver = "2"
members = [
    "crates/eval-server",
    "crates/numbers",
    "crates/symbolics",
    "crates/cli",
    "crates/wasm",
    "crates/common",
    "crates/parser",
    "crates/parser-macros",
    "debug-utils/visualize-pattern-program",
    "debug-utils/list-matches",
]

[profile.profiling]
inherits = "release"
debug = true
