[package]
name = "eval-server"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel = { path = "../kernel" }
axum = { version = "0.8.8", features = ["ws"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
